[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyviews"
description = "Base package for xml views"
keywords = ["binding", "pyviews", "python", "mvvm", "tkviews", "wxviews"]
version = "3.1.0"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9"
]
dependencies = [
    'injectool==2.*',
    'contextvars;python_version<"3.7"'
]

[project.urls]
"Homepage" = "https://github.com/eumis/pyviews"

[tool.pylint.main]
disable = ["too-few-public-methods", "missing-class-docstring", "missing-function-docstring", "missing-module-docstring"]
max-line-length = 120

[tool.pytest.ini_options]
python_files = '*_tests.py'
python_classes = '*Tests'
